@@ -1,9 +1,12 @@
 package com.pointtils.pointtils.src.application.controllers;
 
-import java.util.List;
-import java.util.UUID;
-import java.util.stream.Collectors;
-
+import com.pointtils.pointtils.src.application.dto.AddUserSpecialtiesRequestDTO;
+import com.pointtils.pointtils.src.application.dto.UserSpecialtiesResponseDTO;
+import com.pointtils.pointtils.src.application.dto.UserSpecialtyResponseDTO;
+import com.pointtils.pointtils.src.application.services.UserSpecialtyService;
+import com.pointtils.pointtils.src.core.domain.entities.UserSpecialty;
+import io.swagger.v3.oas.annotations.security.SecurityRequirement;
+import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
@@ -17,30 +20,26 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
-import com.pointtils.pointtils.src.application.dto.AddUserSpecialtiesRequestDTO;
-import com.pointtils.pointtils.src.application.dto.UserSpecialtiesResponseDTO;
-import com.pointtils.pointtils.src.application.dto.UserSpecialtyResponseDTO;
-import com.pointtils.pointtils.src.application.services.UserSpecialtyService;
-import com.pointtils.pointtils.src.core.domain.entities.UserSpecialty;
-
-import lombok.RequiredArgsConstructor;
+import java.util.List;
+import java.util.UUID;
 
 @RestController
+@SecurityRequirement(name = "bearerAuth")
 @RequestMapping("/v1/users/{userId}/specialties")
 @RequiredArgsConstructor
 public class UserSpecialtyController {
-    
+
     private final UserSpecialtyService userSpecialtyService;
-    
+
     @GetMapping
     public ResponseEntity<UserSpecialtiesResponseDTO> getUserSpecialties(@PathVariable UUID userId) {
         try {
             List<UserSpecialty> userSpecialties = userSpecialtyService.getUserSpecialties(userId);
-            
+
             List<UserSpecialtyResponseDTO> responseDTOs = userSpecialties.stream()
                     .map(this::convertToResponseDTO)
-                    .collect(Collectors.toList());
-            
+                    .toList();
+
             UserSpecialtiesResponseDTO response = new UserSpecialtiesResponseDTO(
                 true,
                 "Especialidades do usuário obtidas com sucesso",
@@ -53,14 +52,14 @@ public class UserSpecialtyController {
                     )
                 )
             );
-            
+
             return ResponseEntity.ok(response);
         } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.NOT_FOUND)
                     .body(new UserSpecialtiesResponseDTO(false, e.getMessage(), null));
         }
     }
-    
+
     @PostMapping
     public ResponseEntity<UserSpecialtiesResponseDTO> addUserSpecialties(
             @PathVariable UUID userId,
@@ -68,14 +67,14 @@ public class UserSpecialtyController {
         try {
             List<UserSpecialty> addedSpecialties = userSpecialtyService.addUserSpecialties(
                 userId, request.getSpecialtyIds(), request.isReplaceExisting());
-            
+
             List<UserSpecialtyResponseDTO> responseDTOs = addedSpecialties.stream()
                     .map(this::convertToResponseDTO)
-                    .collect(Collectors.toList());
-            
+                    .toList();
+
             long totalUserSpecialties = userSpecialtyService.countUserSpecialties(userId);
             int duplicatesIgnored = request.getSpecialtyIds().size() - addedSpecialties.size();
-            
+
             UserSpecialtiesResponseDTO response = new UserSpecialtiesResponseDTO(
                 true,
                 "Especialidades adicionadas com sucesso",
@@ -88,25 +87,25 @@ public class UserSpecialtyController {
                     )
                 )
             );
-            
+
             return ResponseEntity.status(HttpStatus.CREATED).body(response);
         } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST)
                     .body(new UserSpecialtiesResponseDTO(false, e.getMessage(), null));
         }
     }
-    
+
     @PutMapping
     public ResponseEntity<UserSpecialtiesResponseDTO> replaceUserSpecialties(
             @PathVariable UUID userId,
             @RequestBody List<UUID> specialtyIds) {
         try {
             List<UserSpecialty> replacedSpecialties = userSpecialtyService.replaceUserSpecialties(userId, specialtyIds);
-            
+
             List<UserSpecialtyResponseDTO> responseDTOs = replacedSpecialties.stream()
                     .map(this::convertToResponseDTO)
-                    .collect(Collectors.toList());
-            
+                    .toList();
+
             UserSpecialtiesResponseDTO response = new UserSpecialtiesResponseDTO(
                 true,
                 "Especialidades do usuário atualizadas com sucesso",
@@ -119,14 +118,14 @@ public class UserSpecialtyController {
                     )
                 )
             );
-            
+
             return ResponseEntity.ok(response);
         } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST)
                     .body(new UserSpecialtiesResponseDTO(false, e.getMessage(), null));
         }
     }
-    
+
     @PatchMapping("/{userSpecialtyId}")
     public ResponseEntity<UserSpecialtyResponseDTO> updateUserSpecialty(
             @PathVariable UUID userId,
@@ -135,15 +134,15 @@ public class UserSpecialtyController {
         try {
             UserSpecialty updatedUserSpecialty = userSpecialtyService.updateUserSpecialty(
                 userSpecialtyId, userId, newSpecialtyId);
-            
+
             UserSpecialtyResponseDTO responseDTO = convertToResponseDTO(updatedUserSpecialty);
-            
+
             return ResponseEntity.ok(responseDTO);
         } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST).build();
         }
     }
-    
+
     @DeleteMapping("/{specialtyId}")
     public ResponseEntity<Void> removeUserSpecialty(
             @PathVariable UUID userId,
@@ -155,14 +154,14 @@ public class UserSpecialtyController {
             return ResponseEntity.notFound().build();
         }
     }
-    
+
     @DeleteMapping
     public ResponseEntity<UserSpecialtiesResponseDTO> removeUserSpecialties(
             @PathVariable UUID userId,
             @RequestParam List<UUID> specialtyIds) {
         try {
             userSpecialtyService.removeUserSpecialties(userId, specialtyIds);
-            
+
             UserSpecialtiesResponseDTO response = new UserSpecialtiesResponseDTO(
                 true,
                 "Especialidades removidas com sucesso",
@@ -175,14 +174,14 @@ public class UserSpecialtyController {
                     )
                 )
             );
-            
+
             return ResponseEntity.ok(response);
         } catch (Exception e) {
             return ResponseEntity.status(HttpStatus.BAD_REQUEST)
                     .body(new UserSpecialtiesResponseDTO(false, e.getMessage(), null));
         }
     }
-    
+
     private UserSpecialtyResponseDTO convertToResponseDTO(UserSpecialty userSpecialty) {
         return new UserSpecialtyResponseDTO(
             userSpecialty.getId(),
